@@ -6,7 +6,9 @@
 * Upgraded Spring to 4.0.5
 * Upgraded serotonin-utils to 2.1.3
 * Added security to viewing data sources and data points so only users with proper permissions can see them
-* Added additional links to Alarm Report page to allow clicking through to item of interest in event
+* Added additional links to Alarm Report table to allow clicking through to item of interest in event
+* Added filter action to Alarm Links at top of page when multiple alarms are present
+* Added list of available Units to select for each point
 
 *Version 2.4.3*
 * Modified data type select tag
